--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "AA RCE Sandbox",
-  "description": "",
+  "name": "AudioBooks",
+  "description": "Listen, collect and download free mp3 audiobooks.",
   "version": "0.1",
   //need to permissiong in hosts to allow xhr - check this and it's port
   "permissions": ["webview", "http://localhost/"],
